--- a/vip.html
+++ b/vip.html
@@ -5,10 +5,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-     <link rel="stylesheet" href="vips.css">
+     <link rel="stylesheet" href="vip.css">
 </head>
-<body>
-    <h1 class="bg-light h1">Hello</h1>
+<body class="vip">
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">UPGRADE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Benefits</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">FAQ</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="">Referral</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="container">
+        <div class="row text-white mt-3">
+            <div class="col-lg-12 bg">
+                <div class="col-lg-5 mt-3">
+                <p>Welcome to our exclusive world of opulence and indulgence – the SANADO.club VIP Program, where luxury meets excitement! Elevate your gaming experience to unparalleled heights with a membership that goes beyond the ordinary, offering a spectrum of lavish perks designed just for you.					
+                </p>
+                </div>
+
+            </div>
+        </div>
+      </div>
+
     
 
     <!-- TABLE -->
