--- a/vip.html
+++ b/vip.html
@@ -40,16 +40,73 @@
                 <div class="col-lg-5 mt-3">
                 <p>Welcome to our exclusive world of opulence and indulgence – the SANADO.club VIP Program, where luxury meets excitement! Elevate your gaming experience to unparalleled heights with a membership that goes beyond the ordinary, offering a spectrum of lavish perks designed just for you.					
                 </p>
-                </div>
+                <h6>Elite Status and Privileges:</h6>
+                <p>As a valued member of our VIP Program, you will enjoy a prestigious status that opens the doors to a realm of unparalleled privileges. From personalized service to priority access, every moment spent with us is crafted to exceed your expectations.</p>
+                <h6>Daily unlimited Rebates:</h6>
+                <p>Indulge in the unmatched delight of our Daily Rebate, where every bet is not just a wager but an investment in your exclusive casino journey. Earn enticing cashback on your gameplay, transforming each spin or hand into a rewarding experience. Our rebate system ensures that even in the face of a less fortunate streak, you're always a winner.</p>
+            </div>
 
             </div>
         </div>
       </div>
 
+      <div class="container-fluid bg1">
+       <div class="container text-center ">
+        <h5>Minimum Deposit Within A Month</h5>
+           <div class="row justify-content-center mt-5 pt-3">
+                <div class="col-lg-12 d-flex justify-content-center">
+                    
+                    <div class="col-lg-2 mt-5 pt-5 text-center">
+                        <img src="image\bronze.png">
+                        <span style="color: white;">Bronze</span><br>
+                        <span style="color:gold;">30,000</span>
+                    </div>
+                    <div class="col-lg-2 mt-5 pt-2  text-center">
+                        <img src="image\gold.png">
+                        <span style="color: white;">Glod</span><br>
+                        <span style="color:gold;">250,000</span>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <img src="image\diamond.png">
+                        <span style="color: white;">Diamond</span><br>
+                        <span style="color:gold;">By Invitation</span>
+                    </div>
+                    <div class="col-lg-2  mt-5 pt-2 text-center">
+                        <img src="image\platinum.png">
+                        <span style="color: white;">Platinum</span><br>
+                        <span style="color:gold;">500,000</span>
+                    </div>
+                    <div class="col-lg-2 mt-5 pt-5  text-center">
+                        <img src="image\silver.png"><br>
+                        <span style="color: white;">Silver</span><br>
+                        <span style="color:gold;">100,000</span>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+      </div>
+
+
+      <div class="container mt-5 mb-5">
+        <h6>How do I upgrade to SANADO VIP?</h6>
+        <div class="row">
+            <div class="col-lg-12">
+            <p style="color: aliceblue;">	Sanado.club VIP experience</p>
+            <p>	1. Signup at Sanado club </p>
+            <p>	2. All new members begin at Silver Card VIP level.</p>
+            <p>	3. Simply play and accumulate lifetime turnover to upgrade to the next VIP level.</p>
+            <p>	4. Lifetime turnover requirement is calculated cumulatively from the time of registration.</p>
+            <p>	5. Enjoy your daily, weekly, monthly free rewards and bonuses.</p>
+            <p>	Feel free to contact our<span style="color: red;"> 24/7 Customer Support </span>should you require assistance.</p>
+        </div>
+      </div>
+    </div>
+
     
 
     <!-- TABLE -->
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>X</th>
@@ -309,6 +366,72 @@
     </table>
 
 
+    <!--rule-->
+
+<div class="container mt-5 mb-5">
+        <h6>Rules And Regulations</h6>
+        <div class="row">
+            <div class="col-lg-12 d-flex ">
+                <div class="col-lg-9">
+            <p>	1.Lifetime turnover requirement is calculated cumulatively from the time of registration.</p>
+            <p>	2. VIP privileges may not be transferred, traded or sold in any form.</p>
+            <p>	3. VIP status will be removed if found to be engaged in improper or malicious activity.</p>
+            <p>	4. VIP Level up Reward will be issued once the player reaches the next VIP level.</p>
+            <p>	5. Daily rebates are based on the turnover of the VIP from 00:00 to 23:59 daily.</p>
+            <p>	6. Daily rebates will be issued from 1pm onwards and has a 1x turnover before withdrawal.</p>
+            <p>	7. Weekly VIP free bonus is issued every Mondays.</p>
+            <p>	8. Monthly VIP free bonus is issued every first week of the month.</p>
+            <p>	9. Weekly Monthly and birthday bonuses has a 3x turnover requirement before withdrawal.</p>
+            <p>	10. Weekly and Monthly free bonus requires VIP activity of 2,000 and 30,000 turnover respectively to qualify.</p>
+            <p>	11. The final rights of interpretation of the above offers belongs to SanadoClub.</p>
+        </div>
+        <div class="col-lg-3">
+            <img src="image\faq-img12.png" class="w-100">
+        </div>
+      </div>
+    </div>
+</div>
+
+ <!--rule -end-->
+
+
+ <!--reward-->
+
+<div class="container bg2">
+    <div class="row">
+        <div class="col-lg-12 mt-4">
+            <div class="col-lg-6">
+            <h6>Luxurious Gifts fomr our Rewards program:</h6>
+            <p>To show our appreciation for your loyalty, we believe in gifting experiences that money can't buy. Indulge in the finest luxuries with our selection of gifts from our rewards program, ranging from essential bonuses to high-end gadgets. Our VIP members are not just players; they are connoisseurs of the extraordinary.</p>
+            <h6>Tiered Rewards Structure:</h6>
+            <p> Climb the ranks of our VIP Program with our tiered rewards structure, where the higher you ascend, the grander the benefits become. Each tier unlocks a new level of exclusivity, offering enhanced rewards, privileges, and access to elite benefits."</p>
+            <p>	At Sanado.club we understand that your entertainment should be as unique as you are. With our VIP Program, we don't just promise excitement; we deliver an unparalleled casino experience where rebates, promotions, and rewards converge to create a world where luxury and gaming seamlessly intertwine. Join our exclusive circle and let us redefine what it means to be a true VIP. Welcome to a realm where the stakes are high, and the rewards are even higher! </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--reward -end-->
+
+
+
+<!--join-->
+
+<div class="container-fluid bg3">
+    <div class="container">
+    <div class="row">
+        <div class="col-lg-12 mt-5 pt-3">
+            <div class="col-lg-6">
+                <h6>Thank you to all Sanado members.</h6>
+                <p>	In conclusion, our online casino VIP rewards program is designed to take your gaming experience to new highs. We extend our deepest appreciation to each VIP member who has added a touch of excitement to our virtual realm. Your loyalty is the foundation upon which we continue to build an exclusive haven of entertainment and luxury. With tailored rewards, exclusive promotions, and personalized service, we are committed to ensuring that every moment you spend with us is nothing short of extraordinary. As we look to the future, we are excited to roll out even more enticing perks and surprises. Thank you for being an integral part of our VIP community, where the thrill knows no bounds, and the rewards are as limitless as your gaming passion. Here's to many more unforgettable moments with us at Sanado. </p>
+           </div>
+           <button type="button" class="btn btn-warning">Join Now</button>
+        </div>
+    </div>
+    </div>
+</div>
+
+<!--join -end-->
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
