--- a/vip.html
+++ b/vip.html
@@ -28,7 +28,7 @@
               <a class="nav-link px-3" href="#rules">Rules</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link px-3" href="#jion">Jion Now</a>
+                <a class="nav-link px-3" href="#jion">Join Now</a>
               </li>
           </ul>
         </div>
